Remove remaining old templates

--- a/Kitodo/src/main/webapp/pages/incMeta/metadataEditorHeader.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataEditorHeader.xhtml
@@ -25,7 +25,7 @@
             <p:commandButton value="#{msgs.validieren}" icon="fa fa-refresh"
                              action="#{Metadaten.validate}"
                              update="tabView:metadata"/>
-            <p:button id="backBtn" value="#{msgs.zurueck}" outcome="/pages/ProzessverwaltungAlle"
+            <p:button id="backBtn" value="#{msgs.zurueck}" outcome="/pages/processes"
                       icon="fa fa-times"/>
             <p:commandButton id="saveBtn" value="#{msgs.speichern}" action="#{Metadaten.saveMetadataToXml}"
                              icon="fa fa-floppy-o"
