Fix navigation for template edit

--- a/Kitodo/src/main/webapp/pages/taskTemplateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/taskTemplateEdit.xhtml
@@ -69,8 +69,8 @@
 
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-        <li><h:link value="#{msgs.prozesse}" outcome="projects"/></li>
-        <li><h:link value="#{msgs.prozessBearbeiten}" outcome="templateEdit?id=#{TemplateForm.template.id}"/></li>
+        <li><h:link value="#{msgs.prozessvorlage}" outcome="projects"/></li>
+        <li><h:link value="#{msgs.editTemplate}" outcome="templateEdit?id=#{TemplateForm.template.id}"/></li>
         <li><a href="">#{msgs.schrittDetails}</a></li>
     </ui:define>
 </ui:composition>
