--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -17,52 +17,50 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
-        <p:panel id="listWrapper">
+        <p:panel id="metadataEditor">
+            <!-- Header -->
             <p:panel>
-                <!-- Header -->
-                <p:panel>
-                    <ui:include src="/WEB-INF/templates/includes/metadataEditor/header.xhtml" />
-                </p:panel>
-                <!-- Content -->
-                <div id="metadataEditorWrapper">
-                    <!-- First Column -->
-                    <div class="collapsibleWrapper" id="firstColumn">
-                        <button type="button"
-                                onclick="PF('firstColumn').toggle();$('#firstColumn').toggleClass('collapsed')"
-                                class="columnExpandButton">
-                            <i class="fa fa-angle-double-left fa-lg"/>
-                        </button>
-                        <h:outputText styleClass="columnHeading" value="#{msgs.pageStructure}"/>
-                        <p:panel widgetVar="firstColumn" toggleable="true" toggleOrientation="horizontal">
-                            <ui:include src="/WEB-INF/templates/includes/metadataEditor/structure.xhtml" />
-                        </p:panel>
-                    </div>
-                    <!-- Second Column -->
-                    <div class="collapsibleWrapper" id="secondColumn">
-                        <button type="button"
-                                onclick="PF('secondColumn').toggle();$('#secondColumn').toggleClass('collapsed')"
-                                class="columnExpandButton">
-                            <i class="fa fa-angle-double-left fa-lg"/>
-                        </button>
-                        <h:outputText styleClass="columnHeading" value="#{msgs.metadata}"/>
-                        <p:panel widgetVar="secondColumn" toggleable="true" toggleOrientation="horizontal">
-                            <ui:include src="/WEB-INF/templates/includes/metadataEditor/metadata.xhtml" />
-                        </p:panel>
-                    </div>
-                    <!-- Third Column -->
-                    <div class="collapsibleWrapper" id="thirdColumn">
-                        <button type="button"
-                                onclick="PF('thirdColumn').toggle();$('#thirdColumn').toggleClass('collapsed')"
-                                class="columnExpandButton">
-                            <i class="fa fa-angle-double-left fa-lg"/>
-                        </button>
-                        <h:outputText styleClass="columnHeading" value="#{msgs.gallery}"/>
-                        <p:panel widgetVar="thirdColumn" toggleable="true" toggleOrientation="horizontal">
-                            <ui:include src="/WEB-INF/templates/includes/metadataEditor/gallery.xhtml" />
-                        </p:panel>
-                    </div>
-                </div>
+                <ui:include src="/WEB-INF/templates/includes/metadataEditor/header.xhtml" />
             </p:panel>
+            <!-- Content -->
+            <div id="metadataEditorWrapper">
+                <!-- First Column -->
+                <div class="collapsibleWrapper" id="firstColumn">
+                    <button type="button"
+                            onclick="PF('firstColumn').toggle();$('#firstColumn').toggleClass('collapsed')"
+                            class="columnExpandButton">
+                        <i class="fa fa-angle-double-left fa-lg"/>
+                    </button>
+                    <h:outputText styleClass="columnHeading" value="#{msgs.pageStructure}"/>
+                    <p:panel widgetVar="firstColumn" toggleable="true" toggleOrientation="horizontal">
+                        <ui:include src="/WEB-INF/templates/includes/metadataEditor/structure.xhtml" />
+                    </p:panel>
+                </div>
+                <!-- Second Column -->
+                <div class="collapsibleWrapper" id="secondColumn">
+                    <button type="button"
+                            onclick="PF('secondColumn').toggle();$('#secondColumn').toggleClass('collapsed')"
+                            class="columnExpandButton">
+                        <i class="fa fa-angle-double-left fa-lg"/>
+                    </button>
+                    <h:outputText styleClass="columnHeading" value="#{msgs.metadata}"/>
+                    <p:panel widgetVar="secondColumn" toggleable="true" toggleOrientation="horizontal">
+                        <ui:include src="/WEB-INF/templates/includes/metadataEditor/metadata.xhtml" />
+                    </p:panel>
+                </div>
+                <!-- Third Column -->
+                <div class="collapsibleWrapper" id="thirdColumn">
+                    <button type="button"
+                            onclick="PF('thirdColumn').toggle();$('#thirdColumn').toggleClass('collapsed')"
+                            class="columnExpandButton">
+                        <i class="fa fa-angle-double-left fa-lg"/>
+                    </button>
+                    <h:outputText styleClass="columnHeading" value="#{msgs.gallery}"/>
+                    <p:panel widgetVar="thirdColumn" toggleable="true" toggleOrientation="horizontal">
+                        <ui:include src="/WEB-INF/templates/includes/metadataEditor/gallery.xhtml" />
+                    </p:panel>
+                </div>
+            </div>
         </p:panel>
     </ui:define>
     <ui:define name="breadcrumbs">
