Rename 'taskmanager.xhtml' to 'modules.xhtml' since taskmanager will be just one of possibly multiple loaded modules in the new frontend

--- a/Kitodo/src/main/webapp/pages/modules.xhtml
+++ b/Kitodo/src/main/webapp/pages/modules.xhtml
@@ -81,6 +81,6 @@
 
     <ui:define name="breadcrumbs">
         <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
-        <li><a href="">#{msgs.taskmanager}</a></li>
+        <li><a href="">#{msgs.modules}</a></li>
     </ui:define>
 </ui:composition>
