Update pagination and structure include files to better fit into metadata editors first column

--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -42,11 +42,11 @@
                             <p:panel id="structurePanel">
                                 <ui:include src="/WEB-INF/templates/includes/metadataEditor/structure.xhtml" />
                             </p:panel>
-                            <p:panel id="paginationPanel">
+                            <p:panel id="paginationPanel" style="overflow: scroll">
                                 <ui:include src="/WEB-INF/templates/includes/metadataEditor/pagination.xhtml" />
                             </p:panel>
                         </h:form>
-
+                        <ui:include src="/pages/incMeta/dialogs/dialogAddDocStrucType.xhtml"/>
                     </p:panel>
                 </div>
 
@@ -62,7 +62,7 @@
                     </button>
                     <h:outputText styleClass="columnHeading" value="#{msgs.metadata}"/>
                     <p:panel widgetVar="secondColumn" toggleable="true" toggleOrientation="horizontal">
-                        <ui:include src="/WEB-INF/templates/includes/metadataEditor/metadata.xhtml" />
+                        <!--<ui:include src="/WEB-INF/templates/includes/metadataEditor/metadata.xhtml" />-->
                     </p:panel>
                 </div>
 
