Include metadata include file in metadata editors second column

--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -62,7 +62,7 @@
                     </button>
                     <h:outputText styleClass="columnHeading" value="#{msgs.metadata}"/>
                     <p:panel widgetVar="secondColumn" toggleable="true" toggleOrientation="horizontal">
-                        <!--<ui:include src="/WEB-INF/templates/includes/metadataEditor/metadata.xhtml" />-->
+                        <ui:include src="/WEB-INF/templates/includes/metadataEditor/metadata.xhtml" />
                     </p:panel>
                 </div>
 
