Update metadata column styling on metadata editor page

--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -61,7 +61,7 @@
                         <i class="fa fa-angle-double-left fa-lg"/>
                     </button>
                     <h:outputText styleClass="columnHeading" value="#{msgs.metadata}"/>
-                    <p:panel widgetVar="secondColumn" toggleable="true" toggleOrientation="horizontal">
+                    <p:panel widgetVar="secondColumn" toggleable="true" toggleOrientation="horizontal" style="overflow: scroll">
                         <ui:include src="/WEB-INF/templates/includes/metadataEditor/metadata.xhtml" />
                     </p:panel>
                 </div>
