--- a/Kitodo/src/main/webapp/pages/templateEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/templateEdit.xhtml
@@ -51,7 +51,7 @@
 
     <ui:define name="pageTabView">
         <p:tabView id="tabs" cache="false">
-            <p:tab title="#{msgs.prozessDetails}" id="details">
+            <p:tab title="#{msgs.templateDetails}" id="details">
                 <ui:include src="/WEB-INF/templates/includes/templateEdit/details.xhtml"/>
             </p:tab>
             <p:tab title="#{msgs.arbeitsschritte}" id="taskOrder">
