--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -32,12 +32,12 @@
                 <!-- First Column -->
                 <div class="collapsibleWrapper" id="firstColumnWrapper" data-min-width="200">
                     <button type="button"
-                            onclick="PF('firstColumn').toggle();$('#firstColumnWrapper').toggleClass('collapsed');toggleFirstColumn()"
+                            onclick="toggleFirstColumn()"
                             class="columnExpandButton">
                         <i class="fa fa-angle-double-left fa-lg"/>
                     </button>
                     <h:outputText styleClass="columnHeading" value="#{msgs.pageStructure}"/>
-                    <p:panel widgetVar="firstColumn" toggleable="true" toggleOrientation="horizontal">
+                    <p:panel>
                         <h:form id="structureTreeForm">
                             <p:panel id="structurePanel">
                                 <ui:include src="/WEB-INF/templates/includes/metadataEditor/structure.xhtml" />
@@ -56,12 +56,12 @@
                 <!-- Second Column -->
                 <div class="collapsibleWrapper" id="secondColumnWrapper" data-min-width="200">
                     <button type="button"
-                            onclick="PF('secondColumn').toggle();$('#secondColumnWrapper').toggleClass('collapsed');toggleSecondColumn()"
+                            onclick="toggleSecondColumn()"
                             class="columnExpandButton">
                         <i class="fa fa-angle-double-left fa-lg"/>
                     </button>
                     <h:outputText styleClass="columnHeading" value="#{msgs.metadata}"/>
-                    <p:panel widgetVar="secondColumn" toggleable="true" toggleOrientation="horizontal" style="overflow: scroll">
+                    <p:panel style="overflow: scroll">
                         <ui:include src="/WEB-INF/templates/includes/metadataEditor/metadata.xhtml" />
                     </p:panel>
                 </div>
@@ -72,12 +72,12 @@
                 <!-- Third Column -->
                 <div class="collapsibleWrapper" id="thirdColumnWrapper" data-min-width="400">
                     <button type="button"
-                            onclick="PF('thirdColumn').toggle();$('#thirdColumnWrapper').toggleClass('collapsed');toggleThirdColumn()"
+                            onclick="toggleThirdColumn()"
                             class="columnExpandButton">
                         <i class="fa fa-angle-double-left fa-lg"/>
                     </button>
                     <h:outputText styleClass="columnHeading" value="#{msgs.gallery}"/>
-                    <p:panel widgetVar="thirdColumn" toggleable="true" toggleOrientation="horizontal">
+                    <p:panel>
                         <ui:include src="/WEB-INF/templates/includes/metadataEditor/gallery.xhtml" />
                     </p:panel>
                 </div>
