implemented authority checking on indexing page

--- a/Kitodo/src/main/webapp/pages/inc_indexing/indexingRow.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_indexing/indexingRow.xhtml
@@ -20,6 +20,7 @@
             <td>#{objectType.translation}</td>
             <td>
                 <p:commandButton widgetVar="startIndexing#{objectType}"
+                                 rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editIndex')}"
                                  onclick="PF('#{objectType}'+'Progress').start();toggleButtons(false, #{indexingForm.objectTypesAsJson});"
                                  value="#{msgs.startIndexing}"
                                  action="#{indexingForm.startIndexing(objectType)}"
