--- a/Kitodo/src/main/webapp/pages/indexingPage.xhtml
+++ b/Kitodo/src/main/webapp/pages/indexingPage.xhtml
@@ -45,6 +45,7 @@
                                         <td colspan="2">
                                             <p:commandButton widgetVar="createMapping"
                                                              id="createMappingButton"
+                                                             rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editIndex')}"
                                                              value="#{msgs.createMapping}"
                                                              style="width: 100%;"
                                                              action="#{indexingForm.createMapping(true)}"
@@ -63,6 +64,7 @@
                                         <td colspan="2">
                                             <p:commandButton widgetVar="deleteIndex"
                                                              id="deleteIndexButton"
+                                                             rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editIndex')}"
                                                              value="#{msgs.deleteIndex}"
                                                              style="width: 100%;"
                                                              action="#{indexingForm.deleteIndex(true)}"
@@ -106,6 +108,7 @@
                                         <td>
                                             <p:commandButton widgetVar="startIndexingAll"
                                                              id="startIndexingAllButton"
+                                                             rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editIndex')}"
                                                              onclick="PF('allProgress').start();toggleButtons(false, #{indexingForm.objectTypesAsJson});"
                                                              value="#{msgs.startIndexing}"
                                                              action="#{indexingForm.startAllIndexing()}"
