--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -69,7 +69,7 @@
                             <i class="fa fa-chevron-down fa-lg"/>
                         </button>
                     </div>
-                    <p:panel id="secondColumnPanel" style="overflow: scroll">
+                    <p:panel id="secondColumnPanel">
                         <div id="metadataPanel" data-min-height="200">
                             <ui:include src="/WEB-INF/templates/includes/metadataEditor/metadata.xhtml" />
                         </div>
