--- a/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
+++ b/Kitodo/src/main/webapp/pages/metadataEditor.xhtml
@@ -44,7 +44,7 @@
                             <p:panel id="structurePanel">
                                 <ui:include src="/WEB-INF/templates/includes/metadataEditor/structure.xhtml" />
                             </p:panel>
-                            <p:panel id="paginationPanel" style="overflow: scroll">
+                            <p:panel id="paginationPanel">
                                 <ui:include src="/WEB-INF/templates/includes/metadataEditor/pagination.xhtml" />
                             </p:panel>
                         </h:form>
